--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "expo": "~47.0.8",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0"
   },
