--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-drop-shadow": "^0.0.6",
     "react-native-elements": "^3.4.2",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-shadow-2": "^7.0.6",
+    "react-native-svg": "^13.6.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
   },
