--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
+    "expo-contacts": "~11.0.1",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-elements": "^3.4.2",
+    "react-native-image-picker": "^4.10.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
