--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^7.0.6",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "13.4.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
   },
