--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "6",
+    "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^1.9.1",
@@ -25,9 +26,11 @@
     "react-native": "0.70.5",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^7.0.6",
