--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
