--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^4.10.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
