--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.12.0",
