--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "6",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "6",
@@ -25,6 +25,8 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-calendar-picker": "^7.1.3",
+    "react-native-calendars": "^1.1292.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-elements": "^3.4.2",
@@ -39,7 +41,9 @@
     "react-native-shadow-2": "^7.0.6",
     "react-native-svg": "13.4.0",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
